Confirmation Page Done

--- a/Confirmation.html
+++ b/Confirmation.html
@@ -23,7 +23,7 @@
                 <table>
                     <tr>
                         <td>Name</td>
-                        <td>Your Name</td>
+                        <td x-text="visitors.fullname"></td>
                     </tr>
                     <tr>
                         <td>Date</td>
@@ -39,19 +39,15 @@
                     </tr>
                     <tr>
                         <td>Mobile</td>
-                        <td>Your Mobile Number</td>
+                        <td x-text="visitors.mobile"></td>
                     </tr>
                     <tr>
                         <td>Email</td>
-                        <td>Your Email Address</td>
+                        <td x-text="visitors.email"></td>
                     </tr>
                     <tr>
                         <td>Gender</td>
-                        <td>Your Gender</td>
-                    </tr>
-                    <tr>
-                        <td>Tickets</td>
-                        <td></td>
+                        <td x-text="visitors.gender"></td>
                     </tr>
                     <tr>
                         <td>SL Adult</td>
@@ -68,10 +64,6 @@
                     <tr>
                         <td>Foreigner Child</td>
                         <td x-text="foreignerChildCharges"></td>
-                    </tr>
-                    <tr>
-                        <td>Infant</td>
-                        <td>Your Infant Details</td>
                     </tr>
                     <tr>
                         <td>Total Payable</td>
