--- a/Bentota.html
+++ b/Bentota.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="logo">
-      <!-- <img src="Images/Logo.png" alt="Logo"> -->
+      <h2>SeaTurtle</h2>
     </div>
     <nav>
       <ul>
