--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div class="logo">
-      <!-- <img src="Images/Logo.png" alt="Logo"> -->
+      <h2>SeaTurtle</h2>
     </div>
     <nav>
       <ul>
