--- a/Payments.html
+++ b/Payments.html
@@ -29,7 +29,39 @@
                 <button x-bind:disabled="!cardNumber || !expiryDate || !cvv || !nameOnTheCard" type="submit" x-on:click="$store.router.goto('Confirmation'); saveData()">Submit</button>
             </div>
         </section>
-
     </div>
+    <footer class="footer1">
+        <div class="footer-left">
+          <ul>
+            <li><h3>Quick Links</h3></li>
+            <br>
+            <li><a href="index.html">Home</a></li>
+            <br>
+            <li><a href="Purchase and Donate.html">Purchase and Donate</a></li>
+            <br>
+            <li><a href="Turtle Categories.html">Turtle Categories</a></li>
+            <br>
+            <li><a href="Bentota.html">Bentota</a></li>
+          </ul>
+        </div>
+        <div class="footer-middle">
+          <form>
+            <h3>Subscribe to our Newsletter</h3>
+            <input type="email" placeholder="Enter your email" required>
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
+        <div class="contact-us">
+          <h3>Contact Us</h3>
+          <p>Email: hikkaduwahatchery@gmail.com</p>
+          <br>
+          <p>Phone: +94 777 779 228</p>
+          <br>
+          <p>Location: Hikkaduwa</p>
+        </div>
+      </footer>
+      <footer class="footer2">
+        <p>&copy; 2023 Turtle Hatcheries Sri Lanka. All rights reserved. Designed and Developed by <a href="https://www.linkedin.com/in/althaf-rifath/" target="_blank" rel="noopener" style="color: white; text-decoration: none;"><strong>Althaf Rifath</strong></a></p>
+      </footer>
 </body>
 </html>
