--- a/Tickets.html
+++ b/Tickets.html
@@ -14,6 +14,27 @@
 
 <body>
 
+    <header>
+        <div class="logo">
+          <h2>SeaTurtle</h2>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Turtle Categories.html">Turtle Categories</a></li> 
+            <li><a href="Hikkaduwa.html">Hikkaduwa Turtle Hatchery</a></li>
+            <li><a href="Threats.html">Threats to Turtles</a></li>
+            <!-- <li>
+              <button class="subnav">Other Hatcheries <i class="fa fa-caret-down"></i></button>
+              <ul>
+                  <li class="subnav1"><a href="Bentota.html">Bentota</a></li>
+                  <li class="subnav2"><a href="Kosgoda.html">Kosgoda</a></li>
+              </ul> -->
+            <li><a href="Purchase and Donate.html">Purchase and Donate</a></li>
+          </ul>
+        </nav>
+      </header>
+
     <div x-data="ticketsData">
         <section class="main">
             <div class="dates-section">
