--- a/Confirmation.html
+++ b/Confirmation.html
@@ -16,6 +16,26 @@
 </head>
 
 <body>
+    <header>
+        <div class="logo">
+            <h2>SeaTurtle</h2>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Turtle Categories.html">Turtle Categories</a></li>
+                <li><a href="Hikkaduwa.html">Hikkaduwa Turtle Hatchery</a></li>
+                <li><a href="Threats.html">Threats to Turtles</a></li>
+                <!-- <li>
+              <button class="subnav">Other Hatcheries <i class="fa fa-caret-down"></i></button>
+              <ul>
+                  <li class="subnav1"><a href="Bentota.html">Bentota</a></li>
+                  <li class="subnav2"><a href="Kosgoda.html">Kosgoda</a></li>
+              </ul> -->
+                <li><a href="Purchase and Donate.html">Purchase and Donate</a></li>
+            </ul>
+        </nav>
+    </header>
     <div x-data="confirmation">
         <section class="main">
             <h2>Confirmation</h2>
@@ -75,37 +95,41 @@
     </div>
     <footer class="footer1">
         <div class="footer-left">
-          <ul>
-            <li><h3>Quick Links</h3></li>
-            <br>
-            <li><a href="index.html">Home</a></li>
-            <br>
-            <li><a href="Purchase and Donate.html">Purchase and Donate</a></li>
-            <br>
-            <li><a href="Turtle Categories.html">Turtle Categories</a></li>
-            <br>
-            <li><a href="Bentota.html">Bentota</a></li>
-          </ul>
+            <ul>
+                <li>
+                    <h3>Quick Links</h3>
+                </li>
+                <br>
+                <li><a href="index.html">Home</a></li>
+                <br>
+                <li><a href="Purchase and Donate.html">Purchase and Donate</a></li>
+                <br>
+                <li><a href="Turtle Categories.html">Turtle Categories</a></li>
+                <br>
+                <li><a href="Bentota.html">Bentota</a></li>
+            </ul>
         </div>
         <div class="footer-middle">
-          <form>
-            <h3>Subscribe to our Newsletter</h3>
-            <input type="email" placeholder="Enter your email" required>
-            <button type="submit">Subscribe</button>
-          </form>
+            <form>
+                <h3>Subscribe to our Newsletter</h3>
+                <input type="email" placeholder="Enter your email" required>
+                <button type="submit">Subscribe</button>
+            </form>
         </div>
         <div class="contact-us">
-          <h3>Contact Us</h3>
-          <p>Email: hikkaduwahatchery@gmail.com</p>
-          <br>
-          <p>Phone: +94 777 779 228</p>
-          <br>
-          <p>Location: Hikkaduwa</p>
+            <h3>Contact Us</h3>
+            <p>Email: hikkaduwahatchery@gmail.com</p>
+            <br>
+            <p>Phone: +94 777 779 228</p>
+            <br>
+            <p>Location: Hikkaduwa</p>
         </div>
-      </footer>
-      <footer class="footer2">
-        <p>&copy; 2023 Turtle Hatcheries Sri Lanka. All rights reserved. Designed and Developed by <a href="https://www.linkedin.com/in/althaf-rifath/" target="_blank" rel="noopener" style="color: white; text-decoration: none;"><strong>Althaf Rifath</strong></a></p>
-      </footer>
+    </footer>
+    <footer class="footer2">
+        <p>&copy; 2023 Turtle Hatcheries Sri Lanka. All rights reserved. Designed and Developed by <a
+                href="https://www.linkedin.com/in/althaf-rifath/" target="_blank" rel="noopener"
+                style="color: white; text-decoration: none;"><strong>Althaf Rifath</strong></a></p>
+    </footer>
 </body>
 
 </html>
