--- a/Payments.html
+++ b/Payments.html
@@ -1,67 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payments</title>
-    <link rel="icon" href="Images/Favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="CSS/Payments.css">
-    <script src="javaScript/Router.js"></script>
-    <script src="javaScript/Tickets.js"></script>
-    <script src="javaScript/Details.js"></script>
-    <script src="javaScript/Payment.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/mask@3.x.x/dist/cdn.min.js"></script>
-    <script src="https://unpkg.com/alpinejs" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Payments</title>
+  <link rel="icon" href="Images/Favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="CSS/Payments.css">
+  <script src="javaScript/Router.js"></script>
+  <script src="javaScript/Tickets.js"></script>
+  <script src="javaScript/Details.js"></script>
+  <script src="javaScript/Payment.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/mask@3.x.x/dist/cdn.min.js"></script>
+  <script src="https://unpkg.com/alpinejs" defer></script>
 </head>
+
 <body>
-    <div class="main" x-data="payments">
-        <section>
-            <h2>Payments</h2>
-            <div class="card-payment" id="card-payment">
-                <label for="cardNumber"><b>Card Number</b></label>
-                <input type="text" name="cardNumber" x-model="cardNumber" x-mask="9999-9999-9999-9999" placeholder="9999-9999-9999-9999">
-                <label for="expiryDate"><b>Expiry Date</b></label>
-                <input type="text" name="expiryDate" x-model="expiryDate" x-mask="99/99" placeholder="MM/YY">
-                <label for="cvv/cvc"><b>CVV/CVC</b></label>
-                <input type="text" name="cvv/cvc" x-model="cvv" x-mask="999" placeholder="000">
-                <label for="nameOnTheCard"><b>Name on the Card</b></label>
-                <input type="text" name="nameOnTheCard" x-model="nameOnTheCard" placeholder="John Doe">
-                <button x-bind:disabled="!cardNumber || !expiryDate || !cvv || !nameOnTheCard" type="submit" x-on:click="$store.router.goto('Confirmation'); saveData()">Submit</button>
-            </div>
-        </section>
+  <header>
+    <div class="logo">
+      <h2>SeaTurtle</h2>
     </div>
-    <footer class="footer1">
-        <div class="footer-left">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Turtle Categories.html">Turtle Categories</a></li>
+        <li><a href="Hikkaduwa.html">Hikkaduwa Turtle Hatchery</a></li>
+        <li><a href="Threats.html">Threats to Turtles</a></li>
+        <!-- <li>
+          <button class="subnav">Other Hatcheries <i class="fa fa-caret-down"></i></button>
           <ul>
-            <li><h3>Quick Links</h3></li>
-            <br>
-            <li><a href="index.html">Home</a></li>
-            <br>
-            <li><a href="Purchase and Donate.html">Purchase and Donate</a></li>
-            <br>
-            <li><a href="Turtle Categories.html">Turtle Categories</a></li>
-            <br>
-            <li><a href="Bentota.html">Bentota</a></li>
-          </ul>
-        </div>
-        <div class="footer-middle">
-          <form>
-            <h3>Subscribe to our Newsletter</h3>
-            <input type="email" placeholder="Enter your email" required>
-            <button type="submit">Subscribe</button>
-          </form>
-        </div>
-        <div class="contact-us">
-          <h3>Contact Us</h3>
-          <p>Email: hikkaduwahatchery@gmail.com</p>
-          <br>
-          <p>Phone: +94 777 779 228</p>
-          <br>
-          <p>Location: Hikkaduwa</p>
-        </div>
-      </footer>
-      <footer class="footer2">
-        <p>&copy; 2023 Turtle Hatcheries Sri Lanka. All rights reserved. Designed and Developed by <a href="https://www.linkedin.com/in/althaf-rifath/" target="_blank" rel="noopener" style="color: white; text-decoration: none;"><strong>Althaf Rifath</strong></a></p>
-      </footer>
+              <li class="subnav1"><a href="Bentota.html">Bentota</a></li>
+              <li class="subnav2"><a href="Kosgoda.html">Kosgoda</a></li>
+          </ul> -->
+        <li><a href="Purchase and Donate.html">Purchase and Donate</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div class="main" x-data="payments">
+    <section>
+      <h2>Payments</h2>
+      <div class="card-payment" id="card-payment">
+        <label for="cardNumber"><b>Card Number</b></label>
+        <input type="text" name="cardNumber" x-model="cardNumber" x-mask="9999-9999-9999-9999"
+          placeholder="9999-9999-9999-9999">
+        <label for="expiryDate"><b>Expiry Date</b></label>
+        <input type="text" name="expiryDate" x-model="expiryDate" x-mask="99/99" placeholder="MM/YY">
+        <label for="cvv/cvc"><b>CVV/CVC</b></label>
+        <input type="text" name="cvv/cvc" x-model="cvv" x-mask="999" placeholder="000">
+        <label for="nameOnTheCard"><b>Name on the Card</b></label>
+        <input type="text" name="nameOnTheCard" x-model="nameOnTheCard" placeholder="John Doe">
+        <button x-bind:disabled="!cardNumber || !expiryDate || !cvv || !nameOnTheCard" type="submit"
+          x-on:click="$store.router.goto('Confirmation'); saveData()">Submit</button>
+      </div>
+    </section>
+  </div>
+  <footer class="footer1">
+    <div class="footer-left">
+      <ul>
+        <li>
+          <h3>Quick Links</h3>
+        </li>
+        <br>
+        <li><a href="index.html">Home</a></li>
+        <br>
+        <li><a href="Purchase and Donate.html">Purchase and Donate</a></li>
+        <br>
+        <li><a href="Turtle Categories.html">Turtle Categories</a></li>
+        <br>
+        <li><a href="Bentota.html">Bentota</a></li>
+      </ul>
+    </div>
+    <div class="footer-middle">
+      <form>
+        <h3>Subscribe to our Newsletter</h3>
+        <input type="email" placeholder="Enter your email" required>
+        <button type="submit">Subscribe</button>
+      </form>
+    </div>
+    <div class="contact-us">
+      <h3>Contact Us</h3>
+      <p>Email: hikkaduwahatchery@gmail.com</p>
+      <br>
+      <p>Phone: +94 777 779 228</p>
+      <br>
+      <p>Location: Hikkaduwa</p>
+    </div>
+  </footer>
+  <footer class="footer2">
+    <p>&copy; 2023 Turtle Hatcheries Sri Lanka. All rights reserved. Designed and Developed by <a
+        href="https://www.linkedin.com/in/althaf-rifath/" target="_blank" rel="noopener"
+        style="color: white; text-decoration: none;"><strong>Althaf Rifath</strong></a></p>
+  </footer>
 </body>
+
 </html>
